# career-scout

./: .gitattributes  .gitignore  AGENTS.md  ALICE_SOUL.md  AUDIT.md  Alice.md  LICENSE  README.md  pyproject.toml  routine_config.md
.github/workflows/: ci.yml
config/: fit_model.toml  observability_production_policy.json  profile_archetypes.toml
docs/: AGENTIC_DESIGN_STANDARD_INPUT.md  ALICE_THREE_MOVES_DESIGN.md  ARCHITECTURE.md  DECISION_LOG.md  FIT_STRATEGY_SPINE.md  OBSERVABILITY.md  README.md  SOURCING_MATCHER_REDESIGN.md
docs/observability/: PART_A_IMPLEMENTATION_NOTE.md  PHOENIX_AUDIT.md  PRODUCTION_STANDARD.md
evals/: alice_scope_regression_cases.jsonl
knowledge/: README.md  adversarial-screener-prompt.v1.md  sources.md
knowledge/ai-screening/: current-ai-tools.md
knowledge/ats-systems/: how-ats-works.md
knowledge/comp-negotiation/: employer-side-comp.md
knowledge/experience/: README.md  _template.md  alice.md  cadence-analytics.md  ironclad-industrial.md  lattice-additive.md
knowledge/hiring-manager-lens/: what-hms-evaluate.md
knowledge/interview-methodology/: structured-interviews.md  transitions.md
knowledge/market-intelligence/: current-landscape.md
knowledge/positioning/: messaging-guardrails.md  positioning-spine.md
knowledge/primitives/: SCHEMA.md  primitives.jsonl
knowledge/recruiting-ops/: how-recruiters-work.md
knowledge/referral-dynamics/: how-referrals-work.md
migrations/supabase/: 0001_init.sql  0002_reporting_views.sql
monitoring/: alert_rules.yml  prometheus.yml
rails/: config.json
rails/adversarial/: DEPARTURES.md  accrete.sh  case_template.sh  fixture.sh  lib.sh  registry.json  run_eval.sh
rails/verifier/: baseline.json  demonstrated_red.py  doctor.sh  fingerprint.py  incident.py  load_bearing.txt  remote_ref.sh  scoreboard.sh  stats.py  stats.sh  status.sh  treehash.py  verify.sh
roadmap/: deferred-features.md
scripts/: phoenix_capture.sh  run_daily.sh  run_weekly.sh  snapshot_state.sh
scripts/harness/: run_harness.sh
self/: capabilities.md
src/alice/: __init__.py  ai_guardrails.py  guards.py  jobcfg.py  tools.py  (+2 more)
targets/: discovered_slugs.json  vc_boards.json  vc_seed.json  yc_boards.json
tests/: test_ai_guardrails.py  test_ai_residue.py  test_alert_routing.py  test_alice_eval_dataset.py  test_ats_client.py  test_banned_framing.py  test_chat_memory.py  test_daily_delta_fit_judge.py  test_drop_reason.py  test_fit_dimensions.py  test_fit_judge.py  test_fix_grounding.py  test_gate_anomalies.py  test_grounding_detectors.py  test_grounding_fallback.py  test_knowledge_index.py  test_ledger_router.py  test_llm_cost_routing_hardening.py  test_location_gate.py  test_migrate_sheet_to_supabase.py  test_no_import_cycles.py  test_observability_artifacts.py  test_observability_healthcheck.py  test_observability_tools.py  test_outcomes.py  test_phase0_parameterization.py  test_product_analytics.py  test_profile_intake.py  test_protest_language.py  test_reformat_ledger.py  test_remote_body_detection.py  test_reporting.py  test_route_freeform.py  test_runtime_metrics.py  test_safety_invariants.py  test_screening_docs.py  test_sentry_query.py  test_supabase_ledger.py  test_targets_harvest.py  test_telegram_fulldelivery.py  (+5 more)
(+131 files in other folders)
